tests/golden/18.lean.expected
tests/golden/18.lean:20:6: error: aesop: failed to prove the goal after exhaustive search.
